Atualização de cargos

--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">Sobre</h2>
-                    <p class="lead mb-5">Apaixonado por tecnologia, ciência e inovação, bacharel em Química pela Universidade Federal de São Carlos (UFSCar), mestre e doutor pela Universidade de São Paulo (USP). 
-                        Possui experiência em análises instrumentais, como FAAS, CHNS, ICP-OES, LIBS, fluorescência, para fins de geração de dados de referência para modelagem (machine learning) utilizando quimiometria 
-                        (química, matemática, estatística e computação), análise e ciência de dados (ETL), a partir de linguagens de programação como MATLAB e Python (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, 
-                        matplotlib, plotly e seaborn). Temas ambientais com foco agrônomico tais estoque de carbono, sequestro de carbono, mercado de crédito de carbono, grau de humificação da matéria orgânica do solo, 
-                        sistemas de pastagem, reuso de subprodutos agrícolas, foram focos nos trabalhos de mestrado e doutorado. Atualmente atua como cientista de dados pleno na AGROROBÓTICA no desenvolvimento de modelos
-                        de predição utilizando técnicas fotônicas e também na colaboração no desenvolvimento de invetários de crédito de carbono junto à equipe de sustentabilidade; possui experiência em ISO 17025 como 
-                        auditor interno e líder integrante da equipe técnica de implementação da gestão da qualidade na empresa, bem como na validação de métodos analíticos com LIBS.</p>
+                    <p class="lead mb-5">Apaixonado por tecnologia, ciência e inovação, bacharel em Química pela Universidade Federal de São Carlos (UFSCar), 
+                        mestre e doutor pela Universidade de São Paulo (USP). Possui experiência em análises instrumentais, como AAS, ICP-OES, LIBS, fluorescência, 
+                        para fins de geração de dados de referência para modelagem (machine learning) utilizando quimiometria (química, matemática, estatística e 
+                        computação), análise e ciência de dados (ETL), com aplicações em linguagem de programação como MATLAB e Python (pandas, Numpy, SKlearn, scipy, 
+                        PyQt, PySide6, matplotlib, plotly e seaborn). </p>
+                    <p class="lead mb-5"> Temas ambientais com foco agrícola tais estoque de carbono, sequestro de carbono, mercado de crédito de carbono, humificação da matéria orgânica do solo, 
+                        sistemas de pastagem, reuso de subprodutos agrícolas, foram muito abordados nos trabalhos de mestrado e doutorado. Experiência em ISO 17025 como 
+                        auditor interno e líder integrante da equipe técnica de implementação da gestão da qualidade, bem como na validação de métodos analíticos com LIBS. </p>
+                    <p class="lead mb-5">  Atualmente atua no time de Engenharia e Sistemas na AGROROBÓTICA, na frente de desenvolvimento de aplicações e infraestrutura de dados em nuvem 
+                        (Microsoft Founders Hub - Azure). </p>
+                        
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alfredoapxavier/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/alfredoxavier" target="_blank"><i class="fab fa-github"></i></a>
@@ -85,17 +89,16 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cientista de dados pleno</h3>
                             <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
-                            <ul>
-                            <li> 2021 - 2022 - Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS;</li> 
-                            <li> 2021 - 2022 - Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, 
-                                exploração de dados temporais e controle estatístico de processos;</li>
-                            <li> 2021 - atualmente - Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
-                            <li> 2021 - atualmente - Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (HTML + CSS + JS))</li>
-                            <li> 2021 - atualmente - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt).</li>
-                            <li> 2023 - atualmente - Integrante do time de desenvolvimento de computação em nuvem (Azure)</li>
-                            <li> 2022 - atualmente - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA</li>
-                            </ul>
-                           </div>
+                                <ul>
+                                    <li> 2023 - atualmente - Integrante do time de desenvolvimento, estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure); </li>
+                                    <li> 2022 - atualmente - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA;</li>
+                                    <li> 2021 - atualmente - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt) em ambiente Linux Ubuntu/Mint; </li>
+                                    <li> 2021 - atualmente - Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (Python + Flask + HTML + CSS + JS (Bootstrap));</li>
+                                    <li> 2021 - 2023 - Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
+                                    <li> 2021 - 2022 - Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, exploração de dados temporais e controle estatístico de processos; </li>
+                                    <li> 2021 - 2022 - Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS; coordenação da geração e emissão de laudos comerciais. </li>
+                                </ul>
+                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - atualmente</span></div>
                     </div>
 
@@ -103,15 +106,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Químico pesquisador</h3>
                             <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
-                            <ul>
-                            <li> Responsável pela estruturação física e operacional do laboratório químico, incluindo seleção de equipamentos, vidrarias e reagentes, bem como fornecedores e triagem de orçamentos;</li> 
-                            <li> Implementação de métodos de análise de fertilidade do solo segundo Instituto Agronômico de Campinas (IAC) e Embrapa, com o objetivo de geração dados de referência dos modelos de predição 
-                                utilizando a plataforma AGLIBS. Participação dos ensaios de proficiência IAC e PAQLF;</li> 
-                            <li> Responsável pela elaboração e validação dos métodos analíticos para geração de referências para amostras de solo utilizando a Espectroscopia de Emissão Atômica por Plasma Acoplado 
-                                Indutivamente (ICP-OES);</li>
-                            <li> Químico responsável pela coordenação e liderança do laboratório químico com CRQ ativo;</li>
-                            <li> Aperfeiçoamento dos processos internos da empresa, os quais abrangem desde a coleta à emissão do laudo e mapas de recomendação agronômica ao cliente;</li>
-                            <li> Líder integrante da equipe técnica de implementação da ISO 17025 no laboratório.</li>
+                                <ul>
+                                    <li> Responsável pela estruturação física e operacional do laboratório químico, incluindo seleção de equipamentos, vidrarias e reagentes, bem como fornecedores e triagem de orçamentos;</li> 
+                                    <li> Implementação de métodos de análise de fertilidade do solo segundo Instituto Agronômico de Campinas (IAC) e Embrapa, com o objetivo de geração dados de referência dos modelos de predição 
+                                        utilizando a plataforma AGLIBS. Participação dos ensaios de proficiência IAC e PAQLF;</li> 
+                                    <li> Responsável pela elaboração e validação dos métodos analíticos para geração de referências para amostras de solo utilizando a Espectroscopia de Emissão Atômica por Plasma Acoplado 
+                                        Indutivamente (ICP-OES);</li>
+                                    <li> Químico responsável pela coordenação e liderança do laboratório químico com CRQ ativo;</li>
+                                    <li> Aperfeiçoamento dos processos internos da empresa, os quais abrangem desde a coleta à emissão do laudo e mapas de recomendação agronômica ao cliente;</li>
+                                    <li> Líder integrante da equipe técnica de implementação da ISO 17025 no laboratório.</li>
                             </ul>   
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Novembro 2019 - Novembro 2021</span></div>
