--- a/index_us.html
+++ b/index_us.html
@@ -300,7 +300,7 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Winner National Vale-Capes Science and Sustainability Award, 2015 edition.
                             Master's dissertation in the thematic area: Reduction of Greenhouse Gases (GHG). 
                             <p></p> 
-                            <p>Available in: <a href="http://www.vale.com/brasil/pt/aboutvale/news/paginas/premio-vale-capes-reconhece-melhores-trabalhos-pesquisa-relacionados-sustentabilidade.aspx" 
+                            <p>Available in: <a href="https://www.gov.br/capes/pt-br/assuntos/noticias/cerimonia-consagra-melhores-trabalhos-sobre-sustentabilidade-no-pais" 
                             target="_blank">29/09/2016 - Prêmio Vale-Capes reconhece melhores trabalhos de pesquisa relacionados à sustentabilidade</p></a>
                         </li>
                         
