Correção no nomes dos index(s).html

--- a/index_us.html
+++ b/index_us.html
@@ -23,7 +23,7 @@
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Alfredo Xavier</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile1.jpg" alt="" /></span></a>
-                    <a href='index.html'><img class="img-flag" src="assets/flags/br.svg"></a>
+                    <a href='index_br.html'><img class="img-flag" src="assets/flags/br.svg"></a>
                     <a href='index_us.html'><img class="img-flag" src="assets/flags/us.svg"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span></button>
