style_.css * Adição da class "glass"
index.html
* Troca do wallpaper
* Adição da div usando a classe glass

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
    <div class="container-fluid bio">
         <div class="row">
             <div class="col">
-                <h6><br><br> Químico de formação pela UFSCar São Carlos, mestre e doutor  em química analítica pela USP São Carlos.
+                <div class="glass">
+                    <h6><br><br> Químico de formação pela UFSCar São Carlos, mestre e doutor  em química analítica pela USP São Carlos.
                     Entusiasta de tecnologia e inovação, atua atualmente na área de dados, estruturação e computação em nuvem.
                     <br> Abaixo meus links:
-                </h6>
+                    </h6>
+                </div>
             </div>
         </div>
     </div>
@@ -53,7 +55,6 @@
                 <a href="#" target="_blank" class="botao">
                     <p>Em breve</p>
                 </a>
-
             </div>
         </div>
    </div>
