--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <a href="https://www.linkedin.com/in/alfredoapxavier/" target="_blank" class="botao">
                     <p>LinkedIn</p>
                 </a>
-                <a href="#" target="_blank" class="botao">
-                    <p>Em breve</p>
+                <a href="https://carbonfootprintcalculator.azurewebsites.net/" target="_blank" class="botao">
+                    <p>Carbon Footprint Calculator</p>
                 </a>
             </div>
         </div>
