--- a/index_br.html
+++ b/index_br.html
@@ -53,16 +53,23 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">Sobre</h2>
-                    <p class="lead mb-5">Apaixonado por tecnologia, ciência e inovação, bacharel em Química pela Universidade Federal de São Carlos (UFSCar), 
-                        mestre e doutor pela Universidade de São Paulo (USP). Possui experiência em análises instrumentais, como AAS, ICP-OES, LIBS, fluorescência, 
-                        para fins de geração de dados de referência para modelagem (machine learning) utilizando quimiometria (química, matemática, estatística e 
-                        computação), análise e ciência de dados (ETL), com aplicações em linguagem de programação como MATLAB e Python (pandas, Numpy, SKlearn, scipy, 
-                        PyQt, PySide6, matplotlib, plotly e seaborn). </p>
-                    <p class="lead mb-5"> Temas ambientais com foco agrícola tais estoque de carbono, sequestro de carbono, mercado de crédito de carbono, humificação da matéria orgânica do solo, 
-                        sistemas de pastagem, reuso de subprodutos agrícolas, foram muito abordados nos trabalhos de mestrado e doutorado. Experiência em ISO 17025 como 
-                        auditor interno e líder integrante da equipe técnica de implementação da gestão da qualidade, bem como na validação de métodos analíticos com LIBS. </p>
-                    <p class="lead mb-5">  Atualmente atua no time de Engenharia e Sistemas na AGROROBÓTICA, na frente de desenvolvimento de aplicações e infraestrutura de dados em nuvem 
-                        (Microsoft Founders Hub - Azure). </p>
+                    <p class="lead mb-5">Apaixonado por ciência, tecnologia e inovação, minha formação acadêmica inclui a graduação em Química pela renomada Universidade Federal de São Carlos (UFSCar), 
+                        além de mestrado e doutorado pela Universidade de São Paulo (USP). Minha jornada na programação teve início durante o estágio de conclusão de curso em 2010, quando ingressei 
+                        na análise quimiométrica, aplicando técnicas de ciência de dados a conjuntos de informações em análises químicas. 
+                        Utilizei instrumentos de referência, como AAS, ICP-OES e fluorescência, para realizar calibrações e modelagens com o auxílio de técnicas de machine learning, como NIRS e LIBS.</p>
+                    <p class="lead mb-5"> Meus estudos de pós-graduação abrangeram duas áreas distintas. Na primeira, concentrei-me na análise e ciência de dados, utilizando linguagens de programação 
+                        como MATLAB e Python, com bibliotecas como pandas, NumPy, scikit-learn, SciPy, PyQt, PySide6, Matplotlib, Plotly e Seaborn. Na segunda parte, direcionei meu foco para 
+                        questões ambientais relacionadas à agricultura, explorando tópicos como estoque de carbono, sequestro de carbono, mercado de crédito de carbono, humificação da matéria orgânica 
+                        do solo, sistemas de pastagem e reutilização de subprodutos agrícolas. </p>
+                    <p class="lead mb-5">  Minha experiência na empresa AGROROBÓTICA foi além da análise e modelagem de dados com a utilização da tecnologia LIBS no mercado de crédito de carbono. 
+                        Incluiu a atuação como auditor interno conforme a norma ISO 17025 e liderança da equipe técnica na implementação de sistemas de gestão da qualidade. Além disso, 
+                        dediquei-me à validação de métodos analíticos com LIBS, contribuindo para a pesquisa e desenvolvimento da empresa.</p>
+                    <p class="lead mb-5">No departamento de Engenharia e Sistemas da AGROROBÓTICA, desempenhei um papel fundamental no desenvolvimento Full Stack de aplicações em Python, 
+                        com interfaces gráficas em PyQt para ambientes desktop e utilizando Flask para aplicativos web. Além disso, participei da configuração e gerenciamento da infraestrutura de dados 
+                        na nuvem, utilizando a plataforma Microsoft Founders Hub - Azure.</p>
+                    <p class="lead mb-5">Atualmente, minha carreira me levou à Blend IT - CEABS, onde atuo como desenvolvedor Full Stack, utilizando C# e ASP.NET em sistemas baseados no modelo MVC 
+                        com um banco de dados SQL Server como backend.</p>
+
                         
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alfredoapxavier/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -76,7 +83,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Objetivos</h2>
-                    <p class="mb-0">Oportunidade para área de TI - análise e/ou ciência de dados.</p>
+                    <p class="mb-0">Oportunidade para área de TI - Desenvolvedor.</p>
                 </div>
             </section>
 
