--- a/index_us.html
+++ b/index_us.html
@@ -54,14 +54,22 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">About</h2>
-                    <p class="lead mb-5"> Passionate about technology, science, and innovation, has a bachelor's degree in Chemistry from the Federal University of São Carlos (UFSCar), and both master's and Ph.D. degrees from 
-                        the University of São Paulo (USP). Experience in instrumental analysis such as FAAS, CHNS, ICP-OES, LIBS, and fluorescence. Experience in generating reference data for modeling (machine learning)
-                         using chemometrics, (chemistry, mathematics, statistics, and computing), data analysis, and data science (ETL), with applications in programming languages ​​such as MATLAB and Python 
-                         (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, matplotlib, plotly and seaborn). </p>
-                    <p class="lead mb-5"> Environmental issues with an agricultural focus, such as carbon stock, carbon sequestration, carbon credit market, humification 
-                         of soil organic matter, pasture systems, reuse of agricultural by-products, were much addressed in master's and doctoral work. Experience in ISO 17025
-                         as an internal auditor and leader of the technical team for the implementation of quality management, as well as in the validation of analytical methods with LIBS.
-                    <p class="lead mb-5"> Currently works in the Engineering and Systems team at AGROROBÓTICA, in front of application development and cloud data infrastructure (Microsoft Founders Hub - Azure) </p>
+                    <p class="lead mb-5">Passionate about science, technology, and innovation, my academic background includes a bachelor's degree in Chemistry from the renowned Federal 
+                        University of São Carlos (UFSCar), as well as a master's and doctoral degree from the University of São Paulo (USP). My journey into programming began during 
+                        my final internship in 2010 when I delved into chemometric analysis, applying data science techniques to sets of chemical analysis information. I used reference instruments 
+                        such as AAS, ICP-OES, and fluorescence to perform calibrations and modeling with the aid of machine learning techniques like NIRS and LIBS.</p>
+                    <p class="lead mb-5">My postgraduate studies covered two distinct areas. In the first part, I focused on data analysis and data science, using programming languages like MATLAB 
+                        and Python, with libraries such as pandas, NumPy, scikit-learn, SciPy, PyQt, PySide6, Matplotlib, Plotly, and Seaborn. In the second part, I shifted my focus to environmental issues 
+                        related to agriculture, exploring topics such as carbon stock, carbon sequestration, carbon credit market, humification of organic soil matter, pasture systems, 
+                        and the reuse of agricultural byproducts.</p>
+                    <p class="lead mb-5">My experience at AGROROBÓTICA went beyond data analysis and modeling using LIBS technology in the carbon credit market. It also involved acting as an internal auditor 
+                        in accordance with ISO 17025 and leading the technical team in implementing quality management systems. Additionally, I dedicated myself to the validation of analytical methods with LIBS,
+                         contributing to the company's research and development.</p>
+                    <p class="lead mb-5">In the Engineering and Systems department at AGROROBÓTICA, I played a pivotal role in the Full Stack development of Python applications, with graphical interfaces in PyQt 
+                        for desktop environments and utilizing Flask for web applications. Furthermore, I took part in configuring and managing cloud-based data infrastructure using the Microsoft Founders Hub - Azure
+                        platform.</p>
+                    <p class="lead mb-5">Currently, my career has led me to Blend IT - CEABS, where I work as a Full Stack developer, using C# and ASP.NET in MVC-based systems with a SQL Server database backend.</p>
+
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alfredoapxavier/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/alfredoxavier" target="_blank"><i class="fab fa-github"></i></a>
@@ -74,7 +82,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p class="mb-0">Oportunity for IT area - analytics or data science.</p>
+                    <p class="mb-0">Oportunity for IT area - Developer.</p>
                 </div>
             </section>
 
