--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col">
                 <h1>Alfredo Xavier</h1>
-                <h2>Cientista de dados</h2>
+                <h2>Full-Stack Developer | Desenvolvedor C# | ASP.NET | SQL Server</h2>
             </div>
         </div>
     </div>
@@ -32,8 +32,8 @@
         <div class="row">
             <div class="col">
                 <div class="glass">
-                    <h6><br><br> Químico de formação pela UFSCar São Carlos, mestre e doutor  em química analítica pela USP São Carlos.
-                    Entusiasta de tecnologia e inovação, atua atualmente na área de dados, estruturação e computação em nuvem.
+                    <h6><br><br> Químico de formação pela UFSCar São Carlos, mestre e doutor  em química analítica e quimiometria pela USP São Carlos.
+                    Entusiasta de ciência, tecnologia e inovação, atua atualmente na área de desenvolvimento de softwares.
                     <br> Abaixo meus links:
                     </h6>
                 </div>
