--- a/index_br.html
+++ b/index_br.html
@@ -54,7 +54,7 @@
                   <hr class="m-0" />
                     <h2 class="mb-5">Sobre</h2>
                     <p class="lead mb-5">Apaixonado por ciência, tecnologia e inovação, minha formação acadêmica inclui a graduação em Química pela renomada Universidade Federal de São Carlos (UFSCar), 
-                        além de mestrado e doutorado pela Universidade de São Paulo (USP). Minha jornada na programação teve início durante o estágio de conclusão de curso em 2010, quando ingressei 
+                        além de mestrado e doutorado pela Universidade de São Paulo (USP). Minha jornada na programação teve início ainda na graduação, durante o estágio de conclusão de curso em 2010, quando ingressei 
                         na análise quimiométrica, aplicando técnicas de ciência de dados a conjuntos de informações em análises químicas. 
                         Utilizei instrumentos de referência, como AAS, ICP-OES e fluorescência, para realizar calibrações e modelagens com o auxílio de técnicas de machine learning, como NIRS e LIBS.</p>
                     <p class="lead mb-5"> Meus estudos de pós-graduação abrangeram duas áreas distintas. Na primeira, concentrei-me na análise e ciência de dados, utilizando linguagens de programação 
@@ -64,7 +64,7 @@
                     <p class="lead mb-5">  Minha experiência na empresa AGROROBÓTICA foi além da análise e modelagem de dados com a utilização da tecnologia LIBS no mercado de crédito de carbono. 
                         Incluiu a atuação como auditor interno conforme a norma ISO 17025 e liderança da equipe técnica na implementação de sistemas de gestão da qualidade. Além disso, 
                         dediquei-me à validação de métodos analíticos com LIBS, contribuindo para a pesquisa e desenvolvimento da empresa.</p>
-                    <p class="lead mb-5">No departamento de Engenharia e Sistemas da AGROROBÓTICA, desempenhei um papel fundamental no desenvolvimento Full Stack de aplicações em Python, 
+                    <p class="lead mb-5">No departamento de Engenharia e Sistemas da AGROROBÓTICA, desempenhei atividades no desenvolvimento Full Stack de aplicações em Python, 
                         com interfaces gráficas em PyQt para ambientes desktop e utilizando Flask para aplicativos web. Além disso, participei da configuração e gerenciamento da infraestrutura de dados 
                         na nuvem, utilizando a plataforma Microsoft Founders Hub - Azure.</p>
                     <p class="lead mb-5">Atualmente, minha carreira me levou à Blend IT - CEABS, onde atuo como desenvolvedor Full Stack, utilizando C# e ASP.NET em sistemas baseados no modelo MVC 
