--- a/index_br.html
+++ b/index_br.html
@@ -53,7 +53,7 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">Sobre</h2>
-                    <p class="lead mb-5">Apaixonado por ciência, tecnologia e inovação, minha formação acadêmica inclui a graduação em Química pela renomada Universidade Federal de São Carlos (UFSCar), 
+                    <p class="lead mb-5">Apaixonado por ciência, tecnologia e inovação, minha formação acadêmica inclui a graduação em Química pela Universidade Federal de São Carlos (UFSCar), 
                         além de mestrado e doutorado pela Universidade de São Paulo (USP). Minha jornada na programação teve início ainda na graduação, durante o estágio de conclusão de curso em 2010, quando ingressei 
                         na análise quimiométrica, aplicando técnicas de ciência de dados a conjuntos de informações em análises químicas. 
                         Utilizei instrumentos de referência, como AAS, ICP-OES e fluorescência, para realizar calibrações e modelagens com o auxílio de técnicas de machine learning, como NIRS e LIBS.</p>
