--- a/index_us.html
+++ b/index_us.html
@@ -54,7 +54,7 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">About</h2>
-                    <p class="lead mb-5">Passionate about science, technology, and innovation, my academic background includes a bachelor's degree in Chemistry from the renowned Federal 
+                    <p class="lead mb-5">Passionate about science, technology, and innovation, my academic background includes a bachelor's degree in Chemistry from the Federal 
                         University of São Carlos (UFSCar), as well as a master's and doctoral degree from the University of São Paulo (USP). My journey into programming began during 
                         my final internship in 2010 when I delved into chemometric analysis, applying data science techniques to sets of chemical analysis information. I used reference instruments 
                         such as AAS, ICP-OES, and fluorescence to perform calibrations and modeling with the aid of machine learning techniques like NIRS and LIBS.</p>
