--- a/index_br.html
+++ b/index_br.html
@@ -91,22 +91,34 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experiência profissional</h2>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Desenvolvedor Full-Stack | C# ASP.NET MVC | SQL Server</h3>
+                            <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
+                                <ul>
+                                    <li> 2023 - atualmente - Integrante do time de desenvolvimento em C# ASP.NET MVC. Atividades tanto em frontend com desenvolvimento web 
+                                        (HTML, CSS e JS) quanto backend com C# e SQL Server. Versionamento em git com aplicações em Azure DevOps; </li>
+                                </ul>
+                            </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Abril 2023 - atualmente</span></div>
+                    </div>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cientista de dados pleno</h3>
                             <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                                 <ul>
-                                    <li> 2023 - atualmente - Integrante do time de desenvolvimento, estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure); </li>
-                                    <li> 2022 - atualmente - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA;</li>
-                                    <li> 2021 - atualmente - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt) em ambiente Linux Ubuntu/Mint; </li>
-                                    <li> 2021 - atualmente - Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (Python + Flask + HTML + CSS + JS (Bootstrap));</li>
+                                    <li> 2023 - 2023 - Integrante do time de desenvolvimento, estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure); </li>
+                                    <li> 2022 - 2023 - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA;</li>
+                                    <li> 2021 - 2023 - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt) em ambiente Linux Ubuntu/Mint; </li>
+                                    <li> 2021 - 2023 - Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (Python + Flask + HTML + CSS + JS (Bootstrap));</li>
                                     <li> 2021 - 2023 - Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
                                     <li> 2021 - 2022 - Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, exploração de dados temporais e controle estatístico de processos; </li>
                                     <li> 2021 - 2022 - Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS; coordenação da geração e emissão de laudos comerciais. </li>
                                 </ul>
                             </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - atualmente</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - Abril 2023</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
