--- a/index_br.html
+++ b/index_br.html
@@ -98,7 +98,8 @@
                             <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                                 <ul>
                                     <li> 2023 - atualmente - Integrante do time de desenvolvimento em C# ASP.NET MVC. Atividades tanto em frontend com desenvolvimento web 
-                                        (HTML, CSS e JS) quanto backend com C# e SQL Server. Versionamento em git com aplicações em Azure DevOps; </li>
+                                        (HTML, CSS e JS) quanto backend com C# e SQL Server. Versionamento em git com aplicações em Azure DevOps. Utilização de metodologias
+                                    ágeis como SCRUM e KANBAN.</li>
                                 </ul>
                             </div>
                         <div class="flex-shrink-0"><span class="text-primary">Abril 2023 - atualmente</span></div>
