--- a/index_us.html
+++ b/index_us.html
@@ -97,7 +97,8 @@
                             <div class="subheading mb-3">CEABS Services | Security and Innovation</div>
                             <ul>
                                 <li> 2023 - Present - Member of the C# ASP.NET MVC development team. Responsibilities include both frontend web development (HTML, CSS, and JS) 
-                                    and backend development using C# and SQL Server. Version control using Git with applications in Azure DevOps; </li>
+                                    and backend development using C# and SQL Server. Version control using Git with applications in Azure DevOps. Use of agile methodologies 
+                                    such as SCRUM and KANBAN.</li>
                             </ul>
                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021 January - 2023 april</span></div>
